<resources>
    <string name="app_name">Steam Calculator</string>

    <string name="kg">kg</string>
    <string name="J">J</string>
    <string name="J_kg">J/kg</string>
    <string name="Pa">Pa</string>
    <string name="K" translatable="false">K</string>
    <string name="ratio" translatable="false">_</string>
    <string name="percent" translatable="false">%</string>
    <string name="Ro" translatable="false"><![CDATA[&deg;Rø]]></string>
    <string name="Re" translatable="false"><![CDATA[&deg;Re]]></string>
    <string name="N" translatable="false"><![CDATA[&deg;N]]></string>
    <string name="D" translatable="false"><![CDATA[&deg;D]]></string>
    <string name="Ra" translatable="false">R</string>
    <string name="F" translatable="false"><![CDATA[&deg;F]]></string>
    <string name="C" translatable="false"><![CDATA[&deg;C]]></string>
    <string name="kPa">kPa</string>
    <string name="MPa">MPa</string>
    <string name="bar">bar</string>
    <string name="at">at</string>
    <string name="atm">atm</string>
    <string name="psi" translatable="false">psi</string>
    <string name="mmHg">mm Hg</string>
    <string name="mH2O"><![CDATA[m H<sub><small>2</small></sub>O]]></string>
    <string name="kJ">kJ</string>
    <string name="erg">erg</string>
    <string name="cal">cal</string>
    <string name="calth"><![CDATA[cal<sub><small>th</small></sub>]]></string>
    <string name="cal15"><![CDATA[cal<sub><small>15</small></sub>]]></string>
    <string name="BTU" translatable="false">BTU</string>
    <string name="kWh">kWh</string>
    <string name="kJ_kg">kJ/kg</string>
    <string name="kg_m3"><![CDATA[kg/m<sup><small>3</small></sup>]]></string>
    <string name="K_1" translatable="false">1/K</string>
    <string name="Pa_1">1/Pa</string>
    <string name="MPa_1">1/MPa</string>
    <string name="m2_s"><![CDATA[m<sup><small>2</small></sup>/s]]></string>
    <string name="J_kgK"><![CDATA[J/(kg&sdot;K)]]></string>
    <string name="m3_kg"><![CDATA[m<sup><small>3</small></sup>/kg]]></string>
    <string name="m_s">m/s</string>
    <string name="N_m">N/m</string>
    <string name="W_mK"><![CDATA[W/(m&sdot;K)]]></string>
    <string name="SpecificEnthalpy">Specific Enthalpy</string>
    <string name="h" translatable="false">h</string>
    <string name="Pressure">Pressure</string>
    <string name="P" translatable="false">P</string>
    <string name="VapourFraction">Vapour Fraction</string>
    <string name="x" translatable="false">x</string>
    <string name="Density">Density</string>
    <string name="rho" translatable="false"><![CDATA[&rho;]]></string>
    <string name="RelativePermittivity">Relative Permittivity</string>
    <string name="epsilon" translatable="false"><![CDATA[&epsilon;]]></string>
    <string name="DynamicViscosity">Dynamic Viscosity</string>
    <string name="nu" translatable="false"><![CDATA[&nu;]]></string>
    <string name="IsobaricCubicExpansionCoefficient">Isobaric Cubic Expansion Coefficient</string>
    <string name="av"><![CDATA[&alpha;<sub><small>v</small></sub>]]></string>
    <string name="IsothermalCompressibility">Isothermal Compressibility</string>
    <string name="kT"><![CDATA[&kappa;<sub><small>T</small></sub>]]></string>
    <string name="KinematicViscosity">Kinematic Viscosity</string>
    <string name="eta" translatable="false"><![CDATA[&eta;]]></string>
    <string name="PrandtlNumber">Prandtl Number</string>
    <string name="Pr" translatable="false">Pr</string>
    <string name="SpecificInternalEnergy">Specific Internal Energy</string>
    <string name="u" translatable="false">u</string>
    <string name="SpecificEntropy">Specific Entropy</string>
    <string name="s" translatable="false">s</string>
    <string name="SpecificIsobaricHeatCapacity">Specific Isobaric Heat Capacity</string>
    <string name="cp" translatable="false"><![CDATA[c<sub><small>p</small></sub>]]></string>
    <string name="cv" translatable="false"><![CDATA[c<sub><small>v</small></sub>]]></string>
    <string name="SpecificIsochoricHeatCapacity">Specific Isochoric Heat Capacity</string>
    <string name="SpecificVolume">Specific Volume</string>
    <string name="v" translatable="false">v</string>
    <string name="SpeedOfSound">Speed of Sound</string>
    <string name="w" translatable="false">w</string>
    <string name="SurfaceTension">Surface Tension</string>
    <string name="sigma" translatable="false"><![CDATA[&sigma;]]></string>
    <string name="Temperature">Temperature</string>
    <string name="T" translatable="false">T</string>
    <string name="ThermalConductivity">Thermal Conductivity</string>
    <string name="lambda" translatable="false"><![CDATA[&lambda;]]></string>
    <string name="ThermalDiffusivity">Thermal Diffusivity</string>
    <string name="k"><![CDATA[&kappa;]]></string>
    <string name="SpecificGibbsFreeEnergy">Specific Gibbs Free Energy</string>
    <string name="g" translatable="false">g</string>
    <string name="menu_title_preferences">Settings</string>
    <string name="Pas"><![CDATA[Pa&sdot;s]]></string>
    <string name="preferenceSummaryPropertyNames">Show Property Names</string>
    <string name="preferenceTitlePropertyNames">Property Names</string>
    <string name="SpecificEnthalpyOfVaporization">Specific Enthalpy of Vaporization</string>
    <string name="hvap"><![CDATA[&Delta;h<sub><small>vap</small></sub>]]></string>
    <string name="kcal">kcal</string>
    <string name="kcalth"><![CDATA[kcal<sub><small>th</small></sub>]]></string>
    <string name="kcal15"><![CDATA[kcal<sub><small>15</small></sub>]]></string>
    <string name="cal_kg">cal/kg</string>
    <string name="calth_kg"><![CDATA[cal<sub><small>th</small></sub>/kg]]></string>
    <string name="cal15_kg"><![CDATA[cal<sub><small>15</small></sub>/kg]]></string>
    <string name="kcal_kg">kcal/kg</string>
    <string name="kcalth_kg"><![CDATA[kcal<sub><small>th</small></sub>/kg]]></string>
    <string name="kcal15_kg"><![CDATA[kcal<sub><small>15</small></sub>/kg]]></string>
    <string name="kJ_kgK"><![CDATA[kJ/(kg&sdot;K)]]></string>
    <string name="cal_kgK"><![CDATA[cal/(kg&sdot;K)]]></string>
    <string name="calth_kgK"><![CDATA[cal<sub><small>th</small></sub>/(kg&sdot;K)]]></string>
    <string name="cal15_kgK"><![CDATA[cal<sub><small>15</small></sub>/(kg&sdot;K)]]></string>
    <string name="kcal_kgK"><![CDATA[kcal/(kg&sdot;K)]]></string>
    <string name="kcalth_kgK"><![CDATA[kcal<sub><small>th</small></sub>/(kg&sdot;K)]]></string>
    <string name="kcal15_kgK"><![CDATA[kcal<sub><small>15</small></sub>/(kg&sdot;K)]]></string>
    <string name="kgf_cm2"><![CDATA[kg/cm<sup><small>2</small></sup>]]></string>
    <string name="preferenceKeyShowPropertyNames" translatable="false">showPropertyNames</string>
    <string name="preferenceKeyScientificFormatOnly" translatable="false">scientificFormatOnly</string>
    <string name="preferenceKeyDecimals" translatable="false">decimals</string>
    <string name="preferenceSummaryDecimals">Number of Decimals</string>
    <string name="preferenceTitleDecimals">Decimals</string>
    <string name="preferenceSummaryScientificFormatOnly">Show Values With Scientific Format Only</string>
    <string name="preferenceTitleScientificFormatOnly">Scientific Format Only</string>
    <string name="lb" translatable="false">lb</string>
    <string name="ft3_lb" translatable="false"><![CDATA[ft<sup><small>3</small></sup>/lb]]></string>
    <string name="cP" translatable="false">cP</string>
    <string name="lb_in2" translatable="false"><![CDATA[lb/in<sup><small>2</small></sup>]]></string>
    <string name="cSt" translatable="false">cSt</string>
    <string name="in2_lb" translatable="false"><![CDATA[in<sup><small>2</small></sup>/lb]]></string>
    <string name="R_1" translatable="false">1/R</string>
    <string name="BTU_lb" translatable="false">BTU/lb</string>
    <string name="BTU_lbR" translatable="false"><![CDATA[BTU/(lb&sdot;R)]]></string>
    <string name="lb_ft3" translatable="false"><![CDATA[lb/ft<sup><small>3</small></sup>]]></string>
    <string name="ft_s" translatable="false">ft/s</string>
    <string name="kg_s2"><![CDATA[kg/s<sup><small>2</small></sup>]]></string>
    <string name="lbf_ft" translatable="false">lbf/ft</string>
    <string name="BTU_hrftR" translatable="false"><![CDATA[BTU/(hr&sdot;ft&sdot;R)]]></string>
    <string name="menu_title_info_details">Info Details</string>
    <string name="sourcesInfo"><![CDATA[
    This app uses <a href="http://www.hummeling.com/IF97">Java IAPWS-IF97 Steam Tables</a> library
    with open <a href="https://sourceforge.net/projects/if97/">source code</a>.
]]></string>
    <string name="contactUs">Contact Us: </string>
    <string name="contactUsByTwitter" translatable="false"><![CDATA[Twitter: <a href="https://twitter.com/%1$s">@%1$s</a>]]></string>
    <string name="contactUsByEmail" translatable="false"><![CDATA[E-mail: <a href="mailto:%1$s">%1$s</a>]]></string>
    <string name="kW_mK"><![CDATA[kW/(m&sdot;K)]]></string>
    <string name="unitSetDefault">Default</string>
    <string name="unitSetEngineering">Engineering</string>
    <string name="unitSetSI">SI</string>
    <string name="unitSetImperial">Imperial</string>
    <string name="unitSetCustom">Custom</string>
    <string name="preferenceKeyUnitSet" translatable="false">unitSet</string>
    <string name="preferenceSummaryUnitSet">Select Set of Units</string>
    <string name="preferenceTitleUnitSet">Units</string>
    <string name="unitSetDefaultValue" translatable="false">default</string>
    <string name="unitSetEngineeringValue" translatable="false">engineering</string>
    <string name="unitSetSIValue" translatable="false">SI</string>
    <string name="unitSetImperialValue" translatable="false">imperial</string>
    <string name="unitSetCustomValue" translatable="false">custom</string>
    <string name="rateViewAskLike">Do you like \"%1$s\"?</string>
    <string name="rateViewAskGPFeedback">Rate this app!</string>
    <string name="rateViewAskEmailFeedback">Tell what\'s wrong?</string>
    <string name="rateViewYes">Yes</string>
    <string name="rateViewNo">No</string>
    <string name="contactUsByGooglePlay" translatable="false"><![CDATA[Google Play: <a href="%1$s">%2$s</a>]]></string>
    <string name="preferenceKeyRatePositive" translatable="false">rateLiked</string>
    <string name="preferenceKeyRateSuccess" translatable="false">rateIgnored</string>
    <string name="preferenceKeyRateCompleted" translatable="false">rateCompleted</string>
    <string name="preferenceKeyRateLastRequestTime" translatable="false">rateLastRequestTime</string>
    <string name="preferenceKeyRateLastRequestLaunch" translatable="false">rateLastRequestLaunch</string>
    <string name="preferenceKeyAppLastLaunchTime" translatable="false">appLastLaunchTime</string>
    <string name="preferenceKeyAppLaunchCounter" translatable="false">appLaunchCounter</string>
    <string name="m">m</string>
    <string name="cm">cm</string>
    <string name="mm">mm</string>
    <string name="mcm"><![CDATA[&mu;m]]></string>
    <string name="nm">nm</string>
    <string name="inch">in</string>
    <string name="preferenceKeyWavelengthEditUnit" translatable="false">wavelengthEditUnit</string>
    <string name="preferenceKeyWavelengthValue">wavelengthValue</string>
</resources>
